welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:8: error: type mismatch;
 found   : Unit
 required: Boolean
	for(n <- 0 to taille - 1){
              ^